Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ variables:
   artifactName: 'front'
 
 steps:
-- script: cd '$(artifactName)'
+- script: cd $(artifactName)
   displayName: Set base directory
 - task: Npm@0
   displayName: 'npm install'
