Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
   inputs:
     SonarQube: 'SonarQube'
     scannerMode: CLI
-    configFile: sonar-project.properties
+    configFile: '$(artifactName)\sonar-project.properties'
 
 - task: SonarQubeAnalyze@4
 
