--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,3 +31,15 @@ steps:
 
 - task: SonarQubePublish@4
 
+- task: CopyPublishBuildArtifacts@1  
+  displayName: 'Copy Publish Artifact: $(artifactName)'  
+  inputs:  
+    CopyRoot: '$(artifactName)\dist'
+    Contents: '**'  
+    ArtifactName: $(artifactName)  
+    ArtifactType: Container  
+  
+- task: DownloadPipelineArtifact@2  
+  displayName: 'Download Pipeline Artifact'  
+  inputs:  
+    targetPath: ' $(Build.ArtifactStagingDirectory)/dist/$(artifactName)'  
