--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,16 +30,11 @@ steps:
 - task: SonarQubeAnalyze@4
 
 - task: SonarQubePublish@4
-
-- task: CopyPublishBuildArtifacts@1  
-  displayName: 'Copy Publish Artifact: $(artifactName)'  
-  inputs:  
-    CopyRoot: '$(artifactName)\dist'
-    Contents: '**'  
-    ArtifactName: $(artifactName)  
-    ArtifactType: Container  
   
-- task: DownloadPipelineArtifact@2  
-  displayName: 'Download Pipeline Artifact'  
-  inputs:  
-    targetPath: ' $(Build.ArtifactStagingDirectory)/dist/$(artifactName)'  
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact'
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)\$(artifactName)\dist'
+    ArtifactName: '$(artifactName)'
+    publishLocation: 'Container'
+
