--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,10 +31,11 @@ steps:
 
 - task: SonarQubePublish@4
   
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact'
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)\$(artifactName)\dist'
-    ArtifactName: '$(artifactName)'
-    publishLocation: 'Container'
+- task: CopyPublishBuildArtifacts@1  
+  displayName: 'Copy Publish Artifact: $(artifactName)'  
+  inputs:  
+    CopyRoot: '$(artifactName)\dist'
+    Contents: '**'  
+    ArtifactName: $(artifactName)  
+    ArtifactType: Container  
 
